fix: update openapi bad request (#147)
* fix: update openapi bad request

* fix: formatting
